src/parser/serenity_parser/snapshots/serenity__parser__serenity_parser__tests__parser@var a: int;.snap
---
source: src/parser/serenity_parser/tests.rs
expression: ast
---
[line    1] ├─── Var Declaration: a
[line    0] ├─── Call:
[line    0] ╰─── Variable: main
